@@ -1,4 +1,4 @@
-# $NetBSD: files.ppbus,v 1.7 2005/12/11 12:23:28 christos Exp $
+# $NetBSD: files.ppbus,v 1.8 2008/04/29 14:07:36 cegger Exp $
 #
 # Config file and device description for machine-independent parallel port bus
 # code.
@@ -10,12 +10,13 @@ defflag	opt_ppbus_1284.h	DONTPROBE_1284 DEBUG_1284
 define	parport { }
 
 # ppbus related files
-device	ppbus { }
+device	ppbus { }: gpiobus
 attach	ppbus at parport
 file	dev/ppbus/ppbus_conf.c	ppbus		needs-flag
 file	dev/ppbus/ppbus_base.c	ppbus
 file	dev/ppbus/ppbus_msq.c	ppbus
 file	dev/ppbus/ppbus_1284.c	ppbus
+file	dev/ppbus/ppbus_gpio.c  ppbus & gpio
 
 # lpt driver
 defflag	opt_ppbus_lpt.h		LPT_DEBUG LPT_VERBOSE
